--- a/client/src/style.css
+++ b/client/src/style.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .online-signal {
+    @apply w-3 h-3 rounded-full bg-green-400 relative before:absolute before:inset-0 before:animate-ping before:bg-green-400 before:rounded-full;
+  }
+  .online-users-wrapper {
+    @apply text-white w-full flex items-center gap-2;
+  }
+}
+
 html,
 body {
   height: 100%;
